@@ -1,0 +1,13 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         WWW-Search-News
+version:      1.05
+version_from: 
+installdirs:  site
+requires:
+    Test::More:                    0
+    URI:                           0
+    WWW::Search::Test:             2.22
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
