@@ -1,14 +1,15 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME' => 'WWW::Search::News',
-              'VERSION' => 1.03,
+              'VERSION' => 1.05,
               'PREREQ_PM' => {
+                              'Test::More' => 0,
                               'WWW::Search::Test' => 2.22,
                               'URI' => 0,
                              },
              );
 
-print STDERR <<END;
+print STDERR <<'ENDNOTE';
 
 Note: it is very likely that some tests will fail.
 The news changes so rapidly,
@@ -16,4 +17,5 @@ it is impossible to keep the test cases completely up-to-date.
 As long as you get more than zero results,
 it is safe to install the modules.
 
-END
+ENDNOTE
+
